<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:icon="@drawable/home_24px"
            android:title="@string/side_nav_home_title"
            android:checked="true"
            />

        <item android:icon="@drawable/person_24px" android:title="@string/side_nav_profile_title" />
        <item android:icon="@drawable/list_alt_24px" android:title="@string/side_nav_orders_title" />
        <item android:icon="@drawable/favorite_24px" android:title="@string/side_nav_wishlist_title" />
        <item android:icon="@drawable/shopping_cart_24px" android:title="@string/side_nav_cart_title" />
        <item android:icon="@drawable/chat_24px" android:title="@string/side_nav_message_title" />
        <item android:icon="@drawable/settings_24px" android:title="@string/side_nav_setting_title" />
    </group>

    <group>
        <item android:icon="@drawable/login_24px" android:title="@string/side_nav_login_title"/>
        <item android:icon="@drawable/logout_24px" android:title="@string/side_nav_logout_title"/>
    </group>

</menu>